# sample-devops-agent-tools

./: .gitignore  CONTRIBUTING.md  README.md  llms.txt  mkdocs.yml
.claude/: CLAUDE.md
.github/workflows/: deploy-docs.yml
.kiro/steering/: project-conventions.md
cloudformation/: devops-agent-skill-policies.yaml
custom-agents/aws-health-report/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
custom-agents/drift-detection/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
custom-agents/eos-cost-analysis/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
custom-agents/redshift-support-specialist/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
custom-agents/service-quotas-monitor/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
custom-agents/support-cases-report/: CHANGELOG.md  README.md  SYSTEM_PROMPT.md
docs/: getting-started.md  index.md
docs/custom-agents/: index.md
docs/hooks/: agents_catalog.py  skills_catalog.py
docs/javascripts/: agents-data.json  catalog.js  skills-filter.js
docs/skills/: index.md
mcp/rds-aidba/: .gitignore  README.md  pyproject.toml  requirements.txt
mcp/rds-aidba/config/: config.yaml.example  mcp_config.json.example
mcp/rds-aidba/infra/: template.yaml
mcp/rds-aidba/rds_aidba/: __init__.py  __main__.py  agent.py  cli.py  mcp_client.py
mcp/rds-aidba/rds_aidba/health_checks/: __init__.py  guidance.py  mysql.py  postgresql.py
mcp/rds-aidba/rds_aidba/utils/: __init__.py
mcp/rds-aidba/scripts/: add_indexes.sql  create_bad_queries.sql  create_bloat.sql  create_schema.sql  diagnose_cluster.sh  generate_data.sql  generate_load.sh
(+148 files in other folders)
